# Nmap Changelog ($Id$); -*-text-*-

o [Ncat] Added support for Unix domain sockets. The new -U and
  --unixsock options activate this mode. [Tomas Hozza]

o [NSE] Added snmp-hh3c-logins by Kurt Grutzmacher. This script uses a
  weakness in the SNMP of certain modems to retrieve a list of
  usernames and passwords.

o [Nsock] Fixed compilation on Windows XP by restricting the use
  of the poll engine to Vista and later. [Gisle Vanem]

o [NSE] Added support for ECDSA keys to ssh-hostkey.nse. [Adam Števko]

o [Nsock] Added new poll and kqueue engines. [Henri Doreau]

o [Zenmap] Corrected some typos in the Japanese translation.
  [OKANO Takayoshi]

o Changed the CPE for Linux from cpe:/o:linux:kernel to
  cpe:/o:linux:linux_kernel to reflect deprecation in the official CPE
  dictionary.

o Fixed a bug that caused an incorrect source address to be set when
  scanning certain addresses (apparently those ending in .0) on
  Windows XP. The symptom of this bug was the messages
    get_srcaddr: can't connect socket: The requested address is not valid in its context.
    Failed to convert source address to presentation format!?!  Error: Unknown error
  Thanks to Robert Washam and Jorge Hernandez for reports and help
  debugging. [David Fifield]

o Added some additional CPE entries to nmap-service-probes.
  [Dillon Graham]

o Enabled support for IPv6 traceroute using UDP, SCTP, and IPProto
  (Next Header) probes. [David Fifield]

o Fixed an assertion failure with IPv6 traceroute trying to use an
  unsupported protocol:
    nmap: traceroute.cc:749: virtual unsigned char*
    UDPProbe::build_packet(const sockaddr_storage*, u32*) const: Assertion
    `source->ss_family == 2' failed.
  This was reported by Pierre Emeriaud. [David Fifield]

o [NSE] Added oracle-brute-stealth which exploits CVE-2012-3137, a weakness
  in the Oracle O5LOGIN authentication scheme. [Dhiru Kholia]

o Scans that use OS sockets (including TCP connect scan, version